@@ -6,6 +6,7 @@ import static org.junit.jupiter.api.Assertions.*;
 
 import com.nhnacademy.mini_dooray.ssacthree_front.image.adapter.ImageUploadAdapter;
 import com.nhnacademy.mini_dooray.ssacthree_front.review.adapter.ReviewAdapter;
+import com.nhnacademy.mini_dooray.ssacthree_front.review.config.ReviewImagePathConfig;
 import com.nhnacademy.mini_dooray.ssacthree_front.review.dto.*;
 import com.nhnacademy.mini_dooray.ssacthree_front.review.exception.PostReviewFailedException;
 import com.nhnacademy.mini_dooray.ssacthree_front.review.service.impl.ReviewServiceImpl;
@@ -40,6 +41,9 @@ class ReviewServiceTest {
     @Mock
     private HttpServletRequest request;
 
+    @Mock
+    private ReviewImagePathConfig reviewImagePathConfig;
+
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
@@ -68,7 +72,7 @@ class ReviewServiceTest {
         Page<BookReviewResponse> mockPage = new org.springframework.data.domain.PageImpl<>(
             mockContent);
 
-        when(reviewAdapter.getReviewsByBookId(eq(page), eq(size), eq(sort), eq(bookId)))
+        when(reviewAdapter.getReviewsByBookId(page, size, sort, bookId))
             .thenReturn(new ResponseEntity<>(mockPage, HttpStatus.OK));
 
         // When
@@ -78,14 +82,14 @@ class ReviewServiceTest {
         // Then
         assertNotNull(reviewsPage);
         assertEquals(1, reviewsPage.getTotalElements());
-        BookReviewResponse firstReview = reviewsPage.getContent().get(0);
+        BookReviewResponse firstReview = reviewsPage.getContent().getFirst();
         assertEquals("User123", firstReview.getMemberId());
         assertEquals(5, firstReview.getReviewRate());
         assertEquals("Excellent Book", firstReview.getReviewTitle());
         assertEquals("This is a fantastic read!", firstReview.getReviewContent());
         assertNotNull(firstReview.getReviewCreatedAt());
-        verify(reviewAdapter, times(1)).getReviewsByBookId(eq(page), eq(size), eq(sort),
-            eq(bookId));
+        verify(reviewAdapter, times(1)).getReviewsByBookId(page, size, sort,
+            bookId);
     }
 
     @Test
@@ -95,16 +99,26 @@ class ReviewServiceTest {
         Long bookId = 1L;
         Long orderId = 101L;
         ReviewRequest reviewRequest = new ReviewRequest(5, "title", "Amazing book!", null);
-        when(request.getCookies()).thenReturn(
-            new Cookie[]{new Cookie("access-token", "mock-token")});
-        when(imageUploadAdapter.uploadImage(any(), eq("/ssacthree/review/"))).thenReturn(
-            "http://image.url");
+
+        // Mock HTTP Request Cookies
+        when(request.getCookies()).thenReturn(new Cookie[]{new Cookie("access-token", "mock-token")});
+
+        // Mock Image Upload Adapter
+        when(imageUploadAdapter.uploadImage(any(), eq("/mock/image/path"))).thenReturn("http://image.url");
+
+        // Mock ReviewImagePathConfig
+        when(reviewImagePathConfig.getImagePath()).thenReturn("/mock/image/path");
+
+        // Mock ReviewAdapter API Call
         when(reviewAdapter.postReviewBook(anyString(), eq(bookId), eq(orderId), any()))
             .thenReturn(new ResponseEntity<>(HttpStatus.CREATED));
 
         // When & Then
         assertDoesNotThrow(
-            () -> reviewService.postReviewBook(bookId, orderId, reviewRequest, request));
+            () -> reviewService.postReviewBook(bookId, orderId, reviewRequest, request)
+        );
+
+        // Verify that the adapter's method was called once
         verify(reviewAdapter, times(1)).postReviewBook(anyString(), eq(bookId), eq(orderId), any());
     }
 
@@ -197,10 +211,17 @@ class ReviewServiceTest {
         Long bookId = 1L;
         Long orderId = 123L;
         ReviewRequest reviewRequest = new ReviewRequest(5, "Great Book", "Loved it!", null);
-        when(request.getCookies()).thenReturn(
-            new Cookie[]{new Cookie("access-token", "dummy-token")});
-        when(imageUploadAdapter.uploadImage(any(), anyString())).thenReturn(
-            "http://example.com/image.jpg");
+
+        // Mock HTTP Request Cookies
+        when(request.getCookies()).thenReturn(new Cookie[]{new Cookie("access-token", "dummy-token")});
+
+        // Mock Image Upload Adapter
+        when(imageUploadAdapter.uploadImage(any(), anyString())).thenReturn("http://example.com/image.jpg");
+
+        // Mock ReviewImagePathConfig
+        when(reviewImagePathConfig.getImagePath()).thenReturn("/mock/image/path");
+
+        // Simulate API Call Failure
         doThrow(new HttpClientErrorException(HttpStatus.BAD_REQUEST))
             .when(reviewAdapter).postReviewBook(anyString(), eq(bookId), eq(orderId), any());
 
@@ -209,7 +230,6 @@ class ReviewServiceTest {
             reviewService.postReviewBook(bookId, orderId, reviewRequest, request)
         );
     }
-
     @Test
     void testAuthToWriteReview_Fail() {
         // Given
@@ -280,11 +300,18 @@ class ReviewServiceTest {
         Long bookId = 1L;
         Long orderId = 123L;
         ReviewRequest reviewRequest = new ReviewRequest(5, "Great Book", "Loved it!", null);
+
+        // Mock HTTP Request Cookies
         when(request.getCookies()).thenReturn(new Cookie[]{new Cookie("access-token", "dummy-token")});
+
+        // Mock Image Upload Adapter
         when(imageUploadAdapter.uploadImage(any(), anyString())).thenReturn("http://example.com/image.jpg");
 
-        // Mock: API 호출 실패
-        doThrow(new HttpClientErrorException(HttpStatus.BAD_REQUEST))
+        // Mock ReviewImagePathConfig
+        when(reviewImagePathConfig.getImagePath()).thenReturn("/mock/image/path");
+
+        // Mock: 서버 오류 시뮬레이션 (500 Internal Server Error)
+        doThrow(new HttpServerErrorException(HttpStatus.INTERNAL_SERVER_ERROR))
             .when(reviewAdapter).postReviewBook(anyString(), eq(bookId), eq(orderId), any());
 
         // When & Then: PostReviewFailedException 발생 확인
@@ -307,7 +334,7 @@ class ReviewServiceTest {
         RuntimeException exception = assertThrows(RuntimeException.class, () ->
             reviewService.authToWriteReview(bookId, request)
         );
-        assertEquals("이 오류는 뭐지", exception.getMessage());
+        assertEquals("리뷰 권한이 없습니다.", exception.getMessage());
     }
 
     @Test
@@ -325,7 +352,7 @@ class ReviewServiceTest {
         RuntimeException exception = assertThrows(RuntimeException.class, () ->
             reviewService.getReview(request, orderId, bookId)
         );
-        assertEquals("예상치 못한 상태 코드: 404 NOT_FOUND", exception.getMessage());
+        assertEquals("리뷰를 가져오는데 실패하였습니다.", exception.getMessage());
     }
 }
 
